--- a/components/pages/login.html
+++ b/components/pages/login.html
@@ -4,12 +4,13 @@
     <title>Login</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="../../css/login.css" rel="stylesheet" />
-    <link href="../../css/navbar.css" rel="stylesheet" />
+    <link href="../styles/login.css" rel="stylesheet" />
+    <link href="../styles/navbar.css" rel="stylesheet" />
   </head>
   <body>
     <header class="header">
       <nav class="header_nav">
+        <a href="../../index.html" class="nav_item">Inicio</a>
         <a href="./login.html" class="nav_item">Login</a>
         <a href="./cadastro.html" class="nav_item"> Cadastro </a>
         <a href="./menu.html" class="nav_item">Menu</a>
