--- a/components/pages/menu.html
+++ b/components/pages/menu.html
@@ -4,7 +4,7 @@
     <title>Menu</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="../../css/menu.css" rel="stylesheet" />
+    <link href="../styles/menu.css" rel="stylesheet" />
   </head>
   <body>
     <aside>
