--- a/src/styles/usuarios.css
+++ b/src/styles/usuarios.css
@@ -5,6 +5,7 @@ body {
   min-height: 100vh;
   display: flex;
   background-color: var(--color-white-bg);
+  position: relative;
 }
 
 main {
@@ -29,6 +30,7 @@ main > .lista_de_usuarios_section > .lista_de_usuarios_article {
   grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
   padding: 1rem;
+  /* position: relative; */
 }
 
 main > .lista_de_usuarios_section > .lista_de_usuarios_article > .card_usuario {
@@ -42,4 +44,93 @@ main > .lista_de_usuarios_section > .lista_de_usuarios_article > .card_usuario {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  position: relative;
+}
+
+main
+  > .lista_de_usuarios_section
+  > .lista_de_usuarios_article
+  > .card_usuario
+  > .card_buttons {
+  display: flex;
+  right: 0;
+  width: 50px;
+  top: 0;
+  position: absolute;
+  height: 50%;
+  z-index: -1;
+  flex-direction: column;
+  border-radius: 0px 10px 10px 0px;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+}
+
+main
+  > .lista_de_usuarios_section
+  > .lista_de_usuarios_article
+  > .card_usuario
+  > .card_buttons
+  > button {
+  flex-grow: 1;
+  border: none;
+  cursor: pointer;
+  font-size: 24px;
+}
+
+main
+  > .lista_de_usuarios_section
+  > .lista_de_usuarios_article
+  > .card_usuario
+  > .card_buttons
+  > button:nth-child(1) {
+  background-color: #fff;
+  border-bottom: 1px solid black;
+}
+
+main
+  > .lista_de_usuarios_section
+  > .lista_de_usuarios_article
+  > .card_usuario
+  > .card_buttons
+  > button:nth-child(2) {
+  background-color: red;
+}
+
+main
+  > .lista_de_usuarios_section
+  > .lista_de_usuarios_article
+  > .card_usuario
+  > .card_buttons.cover {
+  z-index: 1;
+  visibility: hidden;
+  transition: all 0.5s ease-in-out;
+  box-shadow: none;
+}
+
+main
+  > .lista_de_usuarios_section
+  > .lista_de_usuarios_article
+  > .card_usuario
+  > .card_buttons.cover
+  > button {
+  border: none;
+  background-color: transparent;
+}
+
+main
+  > .lista_de_usuarios_section
+  > .lista_de_usuarios_article
+  > .card_usuario:hover
+  > .card_buttons.cover {
+  box-shadow: none;
+  visibility: visible;
+}
+
+main
+  > .lista_de_usuarios_section
+  > .lista_de_usuarios_article
+  > .card_usuario:hover
+  > .card_buttons {
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.485);
+  right: -40px;
 }
